Rita Clean Data

--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "567e513a",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "4  1990-05-01        6.2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "155cc0ec",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>DATE</th>\n",
-       "      <th>NEWO322UR</th>\n",
+       "      <th>Unemployment</th>\n",
        "      <th>Hurricane</th>\n",
        "      <th>Hurricane Date</th>\n",
        "      <th>Location</th>\n",
@@ -834,12 +834,12 @@
        "</div>"
       ],
       "text/plain": [
-       "        DATE  NEWO322UR Hurricane Hurricane Date                Location  \\\n",
-       "0 1990-01-01        6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "1 1990-02-01        6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "2 1990-03-01        6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "3 1990-04-01        6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
-       "4 1990-05-01        6.2   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "        DATE  Unemployment Hurricane Hurricane Date                Location  \\\n",
+       "0 1990-01-01           6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "1 1990-02-01           6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "2 1990-03-01           6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "3 1990-04-01           6.1   Katrina     2005-08-29  New Orleans Metro Area   \n",
+       "4 1990-05-01           6.2   Katrina     2005-08-29  New Orleans Metro Area   \n",
        "\n",
        "   Delta  \n",
        "0    -15  \n",
@@ -849,7 +849,7 @@
        "4    -15  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,14 +874,14 @@
     "katrina_unemployment_df['Delta'] = katrina_unemployment_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
-    "katrina_unemployment_df = katrina_unemployment_df.rename(columns={'RGMP35380': 'Real GDP'})\n",
+    "katrina_unemployment_df = katrina_unemployment_df.rename(columns={'NEWO322UR': 'Unemployment'})\n",
     "\n",
     "katrina_unemployment_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f94fab04",
    "metadata": {},
    "outputs": [],
