--- a/Project 1 Data Rita.ipynb
+++ b/Project 1 Data Rita.ipynb
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c930ac8b",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "4  1993-01-01              21429"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "59117dbb",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
        "16 2005-01-01              30146      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,14 +1070,14 @@
     "rita_median_df['Delta'] = rita_median_df['Delta'].astype(int)\n",
     "\n",
     "#Rename column \n",
-    "rita_median_df = rita_median_df.rename(columns={'TXHOUS5URN': 'Unemployment'})\n",
+    "rita_median_df = rita_median_df.rename(columns={'TXHOUS5URN': 'Median Income'})\n",
     "\n",
     "rita_median_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
