--- a/Project 1 Data Ike.ipynb
+++ b/Project 1 Data Ike.ipynb
@@ -1070,6 +1070,215 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "09850f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>TXGALV7POP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2001</td>\n",
+       "      <td>254.502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/1/2002</td>\n",
+       "      <td>260.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/1/2003</td>\n",
+       "      <td>265.120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/1/2004</td>\n",
+       "      <td>269.458</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/2005</td>\n",
+       "      <td>274.354</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       DATE  TXGALV7POP\n",
+       "0  1/1/2001     254.502\n",
+       "1  1/1/2002     260.034\n",
+       "2  1/1/2003     265.120\n",
+       "3  1/1/2004     269.458\n",
+       "4  1/1/2005     274.354"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#population data\n",
+    "#import Econ data from Houston\n",
+    "\n",
+    "Ike_6 = \"./Economic Data/GalvestonPopulation.csv\"\n",
+    "\n",
+    "Ike_Pop_df = pd.read_csv(Ike_6)\n",
+    "Ike_Pop_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8251fa10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Median Income</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>254.502</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>-7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-01-01</td>\n",
+       "      <td>260.034</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>-6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2003-01-01</td>\n",
+       "      <td>265.120</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>-5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>269.458</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>274.354</td>\n",
+       "      <td>Ike</td>\n",
+       "      <td>2008-09-13</td>\n",
+       "      <td>Galveston</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Median Income Hurricane Hurricane Date   Location  Delta\n",
+       "0 2001-01-01        254.502       Ike     2008-09-13  Galveston     -7\n",
+       "1 2002-01-01        260.034       Ike     2008-09-13  Galveston     -6\n",
+       "2 2003-01-01        265.120       Ike     2008-09-13  Galveston     -5\n",
+       "3 2004-01-01        269.458       Ike     2008-09-13  Galveston     -4\n",
+       "4 2005-01-01        274.354       Ike     2008-09-13  Galveston     -3"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove rows prior to 1990\n",
+    "\n",
+    "Ike_Pop_df['DATE'] = pd.to_datetime(Ike_Pop_df['DATE'])\n",
+    "\n",
+    "Ike_Pop_df = Ike_Pop_df[Ike_Pop_df[\"DATE\"] >= '2001-01-01']\n",
+    "\n",
+    "#Add hurricane, year, location\n",
+    "\n",
+    "Ike_Pop_df[['Hurricane','Hurricane Date','Location']] = pd.DataFrame([['Ike','2008-09-13','Galveston']], index = Ike_Pop_df.index)\n",
+    "\n",
+    "Ike_Pop_df['Hurricane Date'] = pd.to_datetime(Ike_Pop_df['Hurricane Date'])\n",
+    "\n",
+    "\n",
+    "#We will need to show data from multiple years, so delta from hurricane best option\n",
+    "Ike_Pop_df['Delta'] = ((Ike_Pop_df['DATE'] - Ike_Pop_df['Hurricane Date']).dt.days/365)\n",
+    "\n",
+    "Ike_Pop_df['Delta'] = Ike_Pop_df['Delta'].astype(int)\n",
+    "\n",
+    "#Rename column \n",
+    "Ike_Pop_df = Ike_Pop_df.rename(columns={'TXGALV7POP': 'Population'})\n",
+    "\n",
+    "Ike_Pop_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "aea1c14e",
    "metadata": {},
