--- a/Project 1 Data Katrina.ipynb
+++ b/Project 1 Data Katrina.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "9350e101",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "id": "ddf38f14",
    "metadata": {},
    "outputs": [
@@ -85,7 +85,7 @@
        "4  1978-04-01           56.38"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "03b3b08a",
    "metadata": {
     "scrolled": true
@@ -202,7 +202,7 @@
        "99  New Orleans Metro Area     -3  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "d032fe50",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "4  1988-05-01          212.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "id": "cd39a500",
    "metadata": {
     "scrolled": true
@@ -419,7 +419,7 @@
        "160     2005-08-29  New Orleans Metro Area     -4  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "804da188",
    "metadata": {},
    "outputs": [
@@ -519,7 +519,7 @@
        "4  2005-01-01  84318.920"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "9be756cc",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "4      0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 35,
    "id": "567e513a",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "4  1990-05-01        6.2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "155cc0ec",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
        "136     -4  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,15 +881,418 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "01d49815",
+   "execution_count": 37,
+   "id": "98e45bcf",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Median</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2001</td>\n",
+       "      <td>26844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/1/2002</td>\n",
+       "      <td>26711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/1/2003</td>\n",
+       "      <td>27478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/1/2004</td>\n",
+       "      <td>27355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/2005</td>\n",
+       "      <td>30216</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       DATE  Median\n",
+       "0  1/1/2001   26844\n",
+       "1  1/1/2002   26711\n",
+       "2  1/1/2003   27478\n",
+       "3  1/1/2004   27355\n",
+       "4  1/1/2005   30216"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import Econ data from New Orleans\n",
+    "\n",
+    "katrina_5 = \"./Economic Data/NOLAMedianIncome.csv\"\n",
+    "\n",
+    "katrina_median_df = pd.read_csv(katrina_5)\n",
+    "katrina_median_df.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
+   "id": "01d49815",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>26844</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002-01-01</td>\n",
+       "      <td>26711</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2003-01-01</td>\n",
+       "      <td>27478</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>27355</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>30216</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE  Median Hurricane Hurricane Date                Location  Delta\n",
+       "0 2001-01-01   26844   Katrina     2005-08-29  New Orleans Metro Area     -4\n",
+       "1 2002-01-01   26711   Katrina     2005-08-29  New Orleans Metro Area     -3\n",
+       "2 2003-01-01   27478   Katrina     2005-08-29  New Orleans Metro Area     -2\n",
+       "3 2004-01-01   27355   Katrina     2005-08-29  New Orleans Metro Area     -1\n",
+       "4 2005-01-01   30216   Katrina     2005-08-29  New Orleans Metro Area      0"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove rows prior to 2001\n",
+    "\n",
+    "katrina_median_df['DATE'] = pd.to_datetime(katrina_median_df['DATE'])\n",
+    "\n",
+    "katrina_median_df = katrina_median_df[katrina_median_df[\"DATE\"] >= '2001-01-01']\n",
+    "\n",
+    "#Add hurricane, year, location\n",
+    "\n",
+    "katrina_median_df[['Hurricane','Hurricane Date','Location']] = pd.DataFrame([['Katrina','2005-08-29','New Orleans Metro Area']], index = katrina_median_df.index)\n",
+    "\n",
+    "katrina_median_df['Hurricane Date'] = pd.to_datetime(katrina_median_df['Hurricane Date'])\n",
+    "\n",
+    "\n",
+    "#We will need to show data from multiple years, so delta from hurricane best option\n",
+    "katrina_median_df['Delta'] = ((katrina_median_df['DATE'] - katrina_median_df['Hurricane Date']).dt.days/365)\n",
+    "\n",
+    "katrina_median_df['Delta'] = katrina_median_df['Delta'].astype(int)\n",
+    "\n",
+    "katrina_median_df.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0cf1395f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>NORPOP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/2000</td>\n",
+       "      <td>1315.616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/1/2001</td>\n",
+       "      <td>1311.131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/1/2002</td>\n",
+       "      <td>1311.390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/1/2003</td>\n",
+       "      <td>1312.039</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/2004</td>\n",
+       "      <td>1314.721</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       DATE    NORPOP\n",
+       "0  1/1/2000  1315.616\n",
+       "1  1/1/2001  1311.131\n",
+       "2  1/1/2002  1311.390\n",
+       "3  1/1/2003  1312.039\n",
+       "4  1/1/2004  1314.721"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import Econ data from New Orleans\n",
+    "\n",
+    "katrina_6 = \"./Economic Data/NOLAPopulation.csv\"\n",
+    "\n",
+    "katrina_population_df = pd.read_csv(katrina_6)\n",
+    "katrina_population_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "e4675978",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>NORPOP</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>1311.131</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2002-01-01</td>\n",
+       "      <td>1311.390</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2003-01-01</td>\n",
+       "      <td>1312.039</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>1314.721</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>1313.460</td>\n",
+       "      <td>Katrina</td>\n",
+       "      <td>2005-08-29</td>\n",
+       "      <td>New Orleans Metro Area</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        DATE    NORPOP Hurricane Hurricane Date                Location  Delta\n",
+       "1 2001-01-01  1311.131   Katrina     2005-08-29  New Orleans Metro Area     -4\n",
+       "2 2002-01-01  1311.390   Katrina     2005-08-29  New Orleans Metro Area     -3\n",
+       "3 2003-01-01  1312.039   Katrina     2005-08-29  New Orleans Metro Area     -2\n",
+       "4 2004-01-01  1314.721   Katrina     2005-08-29  New Orleans Metro Area     -1\n",
+       "5 2005-01-01  1313.460   Katrina     2005-08-29  New Orleans Metro Area      0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove rows prior to 2001\n",
+    "\n",
+    "katrina_population_df['DATE'] = pd.to_datetime(katrina_population_df['DATE'])\n",
+    "\n",
+    "katrina_population_df = katrina_population_df[katrina_population_df[\"DATE\"] >= '2001-01-01']\n",
+    "\n",
+    "#Add hurricane, year, location\n",
+    "\n",
+    "katrina_population_df[['Hurricane','Hurricane Date','Location']] = pd.DataFrame([['Katrina','2005-08-29','New Orleans Metro Area']], index = katrina_population_df.index)\n",
+    "\n",
+    "katrina_population_df['Hurricane Date'] = pd.to_datetime(katrina_population_df['Hurricane Date'])\n",
+    "\n",
+    "\n",
+    "#We will need to show data from multiple years, so delta from hurricane best option\n",
+    "katrina_population_df['Delta'] = ((katrina_population_df['DATE'] - katrina_population_df['Hurricane Date']).dt.days/365)\n",
+    "\n",
+    "katrina_population_df['Delta'] = katrina_population_df['Delta'].astype(int)\n",
+    "\n",
+    "katrina_population_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "f94fab04",
    "metadata": {},
    "outputs": [],
@@ -910,13 +1313,26 @@
     "\n",
     "output_data_file4 = './CleanEconData/katrina_cln_housingpriceindex.csv'\n",
     "  \n",
-    "katrina_Housing_df.to_csv(output_data_file4, sep=',')\n"
+    "katrina_Housing_df.to_csv(output_data_file4, sep=',')\n",
+    "\n",
+    "output_data_file5 = './CleanEconData/katrina_cln_median.csv'\n",
+    "  \n",
+    "katrina_median_df.to_csv(output_data_file5, sep=',')\n",
+    "\n",
+    "output_data_file6 = './CleanEconData/katrina_cln_population.csv'\n",
+    "  \n",
+    "katrina_population_df.to_csv(output_data_file6, sep=',')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "635c79b5",
+   "id": "4fd2282f",
    "metadata": {},
    "outputs": [],
    "source": []
