--- a/Project 1 Data Rita.ipynb
+++ b/Project 1 Data Rita.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "9d5ad0c3",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "df723ae9",
    "metadata": {
     "scrolled": true
@@ -87,7 +87,7 @@
        "4  1977-01-01           60.39"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "a0bb91b4",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "104     -3  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "31c4e017",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
        "4  1994-01-01           7.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "id": "2f215b0f",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
        "15     2005-09-18  Houston Area      0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "b7d8170a",
    "metadata": {
     "scrolled": true
@@ -519,7 +519,7 @@
        "4  2005-01-01           748588"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "74751679",
    "metadata": {
     "scrolled": true
@@ -629,7 +629,7 @@
        "4 2005-01-01    748588      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "id": "06c3f813",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
        "4  1990-05-01         5.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "fec16976",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "136 2001-05-01           4.6      Rita     2005-09-18  Houston Area     -4"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "c930ac8b",
    "metadata": {},
    "outputs": [
@@ -937,7 +937,7 @@
        "4  1993-01-01              21429"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "59117dbb",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
        "16 2005-01-01              30146      Rita     2005-09-18  Houston Area      0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1077,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
+   "id": "bd31920c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1/1/1970</td>\n",
+       "      <td>17.855</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1/1/1971</td>\n",
+       "      <td>18.600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/1/1972</td>\n",
+       "      <td>19.200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/1/1973</td>\n",
+       "      <td>18.900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1/1/1974</td>\n",
+       "      <td>18.700</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       DATE  Population\n",
+       "0  1/1/1970      17.855\n",
+       "1  1/1/1971      18.600\n",
+       "2  1/1/1972      19.200\n",
+       "3  1/1/1973      18.900\n",
+       "4  1/1/1974      18.700"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#import Econ data from Houston\n",
+    "\n",
+    "rita_6 = \"./Economic Data/HoustonPop.csv\"\n",
+    "\n",
+    "rita_population_df = pd.read_csv(rita_6)\n",
+    "rita_population_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bfebb85f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DATE</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Hurricane</th>\n",
+       "      <th>Hurricane Date</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Delta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2001-01-01</td>\n",
+       "      <td>22.969</td>\n",
+       "      <td>Rita</td>\n",
+       "      <td>2005-09-18</td>\n",
+       "      <td>Houston Area</td>\n",
+       "      <td>-4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2002-01-01</td>\n",
+       "      <td>22.971</td>\n",
+       "      <td>Rita</td>\n",
+       "      <td>2005-09-18</td>\n",
+       "      <td>Houston Area</td>\n",
+       "      <td>-3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2003-01-01</td>\n",
+       "      <td>22.904</td>\n",
+       "      <td>Rita</td>\n",
+       "      <td>2005-09-18</td>\n",
+       "      <td>Houston Area</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2004-01-01</td>\n",
+       "      <td>23.004</td>\n",
+       "      <td>Rita</td>\n",
+       "      <td>2005-09-18</td>\n",
+       "      <td>Houston Area</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2005-01-01</td>\n",
+       "      <td>22.786</td>\n",
+       "      <td>Rita</td>\n",
+       "      <td>2005-09-18</td>\n",
+       "      <td>Houston Area</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         DATE  Population Hurricane Hurricane Date      Location  Delta\n",
+       "31 2001-01-01      22.969      Rita     2005-09-18  Houston Area     -4\n",
+       "32 2002-01-01      22.971      Rita     2005-09-18  Houston Area     -3\n",
+       "33 2003-01-01      22.904      Rita     2005-09-18  Houston Area     -2\n",
+       "34 2004-01-01      23.004      Rita     2005-09-18  Houston Area     -1\n",
+       "35 2005-01-01      22.786      Rita     2005-09-18  Houston Area      0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# remove rows prior to 1990\n",
+    "\n",
+    "rita_population_df['DATE'] = pd.to_datetime(rita_population_df['DATE'])\n",
+    "\n",
+    "rita_population_df = rita_population_df[rita_population_df[\"DATE\"] >= '2001-01-01']\n",
+    "\n",
+    "#Add hurricane, year, location\n",
+    "\n",
+    "rita_population_df[['Hurricane','Hurricane Date','Location']] = pd.DataFrame([['Rita','2005-09-18','Houston Area']], index = rita_population_df.index)\n",
+    "\n",
+    "rita_population_df['Hurricane Date'] = pd.to_datetime(rita_population_df['Hurricane Date'])\n",
+    "\n",
+    "\n",
+    "#We will need to show data from multiple years, so delta from hurricane best option\n",
+    "rita_population_df['Delta'] = ((rita_population_df['DATE'] - rita_population_df['Hurricane Date']).dt.days/365)\n",
+    "\n",
+    "rita_population_df['Delta'] = rita_population_df['Delta'].astype(int)\n",
+    "\n",
+    "rita_population_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "aea1c14e",
    "metadata": {},
    "outputs": [],
@@ -1100,9 +1305,13 @@
     "  \n",
     "rita_Housing_df.to_csv(output_data_file4, sep=',')\n",
     "\n",
-    "output_data_file5 = './CleanEconData/rita_median_df.csv'\n",
+    "output_data_file5 = './CleanEconData/rita_cln_median.csv'\n",
     "  \n",
-    "rita_median_df.to_csv(output_data_file4, sep=',')"
+    "rita_median_df.to_csv(output_data_file5, sep=',')\n",
+    "\n",
+    "output_data_file6 = './CleanEconData/rita_cln_population.csv'\n",
+    "  \n",
+    "rita_population_df.to_csv(output_data_file6, sep=',')"
    ]
   },
   {
